src/test/pass/valid_then_nil_ret.ly
<@lily

method ret_string():string { return "str" }
method ret_nil_string():string { string s    return s }

ret_string()
ret_nil_string()

@>
