src/test/fail/bad_printfmt.ly
<@lily printfmt("%s%s%s%s%s", "") @>